Fix vendor name in the plugin

--- a/src/META-INF/plugin.xml
+++ b/src/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin version="2">
-  <id>uk.co.cylix.idea.plugin.laravel</id>
+  <id>xyz.pxgamer.idea.plugin.laravel</id>
   <name>Laravel IDE Helper</name>
   <vendor>pxgamer</vendor>
 
